# FEA_AI

./: .dockerignore  .gitignore  Dockerfile  README.md  \  config.yaml  connectivity.csv  plaque_trouée.py  pyproject.toml
.github/workflows/: python-test.yml
data/: data_generator_2d.py  data_generator_3d.py  data_pipeline.py  elasticity_beam_dataset.csv  generalized_shape.py
models/: gnn_hybrid.pth  gnn_v1.pth  gnn_v2.pth  gnn_v3.pth
src/: evaluator.py  trainer.py  visualizer.py
src/fea_gnn/: app.py  benchmark.py  data_loader.py  eval_dashboard.py  evaluator.py  exploration.py  metric_dashboard.py  model.py  plot_metrics.py  test_generalization.py  trainer.py  utils.py  visualizer.py
src/gnn/: generate_data.py  test_gnn.py  train_gnn.py  wood_fem_dataset.pt  wood_gnn_model.pth
src/gnn_ggl/: data.py  evaluation.py  gnn_main.py  model.py
src/regression/: elasticity_problem.py  regression_approach.py
src/transformer/: generate_data.py  mesh_transformer.pth  test.py  train.py
tests/: conftest.py  results.txt  test_data.py  test_model.py
